--- a/Downloads/wdp_project_final_FULL_patched_correct/requirements.txt
+++ b/Downloads/wdp_project_final_FULL_patched_correct/requirements.txt
@@ -2,6 +2,7 @@ Flask==3.0.3
 Flask-SQLAlchemy==3.1.1
 Flask-Migrate==4.0.7
 Werkzeug==3.0.3
+gunicorn==22.0.0
 
 # ADMIN ACCOUNTS
 # ID: ryanadmin    PW: Ryan123!
